--- a/packages/vitamin/src/theme/components/alert.css
+++ b/packages/vitamin/src/theme/components/alert.css
@@ -1,18 +1,81 @@
 @layer components {
   .vui-alert {
-    @apply flex p-1 relative;
-  }
+    /* || Variables */
+    --vui-alert-color-info: theme('colors.blue.400');
+    --vui-alert-color-success: theme('colors.green.400');
+    --vui-alert-color-error: theme('colors.red.400');
+    --vui-alert-color-warning: theme('colors.yellow.400');
+    --vui-alert-color-padding: theme('padding.4');
+    --vui-alert-color-title: theme('colors.gray.900');
+    --vui-alert-color-description: theme('colors.gray.400');
 
-  .vui-alert__close {
-    @apply absolute top-1 right-1 cursor-pointer dark:text-gray-200 text-gray-600 hover:text-gray-900 dark:hover:text-gray-100;
-  }
+    --vui-alert-title-size: theme('fontSize.lg');
+    --vui-alert-title-line: theme('lineHeight.7');
 
-  .vui-alert__title {
-    @apply text-gray-900 dark:text-white;
-  }
+    --vui-alert-description-size: theme('fontSize.sm');
+    --vui-alert-description-line: theme('lineHeight.5');
 
-  .vui-alert--border {
-    @apply border border-solid border-gray-200 dark:border-gray-100;
+    --vui-alert-media-background: theme('backgroundColor.transparent');
+    --vui-alert-media-padding: theme('padding[3.5]');
+    --vui-alert-media-color: theme('textColor.white');
+
+    @apply flex;
+    padding-left: var(--vui-alert-color-padding);
+    overflow: hidden;
+
+    /* || Types */
+    &--info {
+      background-color: var(--vui-alert-color-info);
+    }
+
+    &--success {
+      background-color: var(--vui-alert-color-success);
+    }
+
+    &--error {
+      background-color: var(--vui-alert-color-error);
+    }
+
+    &--warning {
+      background-color: var(--vui-alert-color-warning);
+    }
+
+    /* || Media */
+    &--media-info,
+    &--media-success,
+    &--media-error,
+    &--media-warning {
+      background-color: var(--vui-alert-media-background);
+      padding: var(--vui-alert-media-padding);
+      color: var(--vui-alert-media-color);
+    }
+
+     /* || General */
+    &--border {
+      @apply ring-1 ring-gray-200 dark:ring-gray-100;
+    }
+
+    &__close {
+      @apply absolute top-1 right-1 cursor-pointer dark:text-gray-200 text-gray-600 hover:text-gray-900 dark:hover:text-gray-100;
+    }
+
+    &__title {
+      color: var(--vui-alert-color-title);
+      font-size: var(--vui-alert-title-size);
+      line-height: var(--vui-alert-title-line);
+      @apply dark:text-white;
+    }
+
+    &__description {
+      color: var(--vui-alert-color-description);
+      font-size: var(--vui-alert-description-size);
+      line-height: var(--vui-alert-description-line);
+      @apply dark:text-gray-200;
+    }
+
+    &__content {
+      @apply bg-white dark:bg-gray-800 relative w-full pb-1 pt-1 pl-2;
+    }
   }
 
   .vui-alert--shadow-sm {
