--- a/packages/vitamin/src/theme/components/alert.css
+++ b/packages/vitamin/src/theme/components/alert.css
@@ -1,13 +1,13 @@
 @layer components {
   .vui-alert {
     /* || Variables */
-    --vui-alert-color-info: theme('colors.blue.400');
-    --vui-alert-color-success: theme('colors.green.400');
-    --vui-alert-color-error: theme('colors.red.400');
-    --vui-alert-color-warning: theme('colors.yellow.400');
+    --vui-alert-color-info: var(--vui-color-info);
+    --vui-alert-color-success: var(--vui-color-success);
+    --vui-alert-color-error: var(--vui-color-error);
+    --vui-alert-color-warning: var(--vui-color-warning);
     --vui-alert-color-padding: theme('padding.4');
-    --vui-alert-color-title: theme('colors.gray.900');
-    --vui-alert-color-description: theme('colors.gray.400');
+    --vui-alert-color-title: var(--vui-color-black);
+    --vui-alert-color-description: var(--vui-color-gray);
 
     --vui-alert-title-size: theme('fontSize.lg');
     --vui-alert-title-line: theme('lineHeight.7');
@@ -15,9 +15,9 @@
     --vui-alert-description-size: theme('fontSize.sm');
     --vui-alert-description-line: theme('lineHeight.5');
 
-    --vui-alert-media-background: theme('backgroundColor.transparent');
+    --vui-alert-media-background: var(--vui-color-transparent);
     --vui-alert-media-padding: theme('padding[3.5]');
-    --vui-alert-media-color: theme('textColor.white');
+    --vui-alert-media-color: var(--vui-color-white);
 
     @apply flex;
     padding-left: var(--vui-alert-color-padding);
