feat: tabs component

--- a/packages/vitamin/src/theme/index.css
+++ b/packages/vitamin/src/theme/index.css
@@ -3,3 +3,4 @@
 @import "./components/alert.css";
 @import "./components/button.css";
 @import "./components/button-group.css";
+@import "./components/tabs.css";
