--- a/packages/vitamin/src/theme/variables.css
+++ b/packages/vitamin/src/theme/variables.css
@@ -17,4 +17,6 @@
   --vui-color-black: theme('colors.gray.800');
   --vui-color-gray: theme('colors.gray.400');
   --vui-color-default: theme('colors.gray.200');
+
+  --vui-text-color: theme('colors.gray.800');
 }
