feat: card component

--- a/packages/vitamin/src/theme/index.css
+++ b/packages/vitamin/src/theme/index.css
@@ -3,4 +3,5 @@
 @import "./components/alert.css";
 @import "./components/button.css";
 @import "./components/button-group.css";
+@import "./components/card.css";
 @import "./components/tabs.css";
