feat: input component

--- a/packages/vitamin/src/theme/index.css
+++ b/packages/vitamin/src/theme/index.css
@@ -4,4 +4,5 @@
 @import "./components/button.css";
 @import "./components/button-group.css";
 @import "./components/card.css";
+@import "./components/input.css";
 @import "./components/tabs.css";
