--- a/packages/theme/src/css/utilities/helpers.css
+++ b/packages/theme/src/css/utilities/helpers.css
@@ -30,6 +30,19 @@
   }
 }
 
+.carousel {
+  display: flex;
+
+  &-container {
+    scroll-snap-type: x mandatory;
+  }
+
+  &-slides {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+  }
+}
+
 .is-tiny {
   height: 1rem;
   font-size: .6rem;
@@ -39,4 +52,12 @@
 .ripple {
   background-position: center;
   transition: background 0.8s;
+}
+
+.shadown-current-color {
+  box-shadow: 0 1px 2px color-mix(in srgb, transparent 35%, currentColor);
+}
+
+.tabular-numbers {
+  font-variant-numeric: tabular-nums;
 }
