--- a/packages/ui/src/elements/icon/style.css
+++ b/packages/ui/src/elements/icon/style.css
@@ -1,7 +1,11 @@
 @tailwind components;
 
 @layer components {
-  .ui-icon {
-    @apply button-props transition-colors flex items-center ripple;
+  :host {
+    @apply inline-flex items-center justify-center;
+  }
+
+  .ui-icon-svg {
+    @apply w-full h-full;
   }
 }
