--- a/packages/ui/src/elements/range/style.css
+++ b/packages/ui/src/elements/range/style.css
@@ -3,15 +3,44 @@
 
 @layer components {
   :host {
-    @apply flex flex-wrap content-center;
+    @apply range-props;
+  }
+
+  :host-context(html.dark) {
+    @apply range-props-dark;
+  }
+
+  :host-context(html.light) {
+    @apply range-props-light;
+  }
+
+  slot[name=min]::slotted(*),
+  slot[name=max]::slotted(*) {
+    @apply inline-flex items-center;
+  }
+
+  slot[name=min]::slotted(*) {
+    margin-right: 0.25rem;
+  }
+
+  slot[name=max]::slotted(*) {
+    margin-left: 0.25rem;
+  }
+
+  label {
+    @apply flex items-center;
+
+    input[type="range"] {
+      width: auto;
+    }
   }
 
   input[type="range"] {
     -webkit-appearance: none;
-    width: 100%;
-    height: 4px;
-    border-radius: 5px;
-    background: theme('colors.white');
+    width: var(--range-width);
+    height: var(--range-height);
+    border-radius: var(--range-border-radius);
+    background: var(--range-background-color);
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
@@ -21,24 +50,24 @@
   input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: theme('colors.grey-dark');
+    width: var(--range-thumb-width);
+    height: var(--range-thumb-height);
+    border-radius: var(--range-thumb-border-radius);
+    background-color: var(--range-thumb-background-color);
     cursor: pointer;
     transition: 0.3s ease-in-out;
   }
 
   input[type="range"]::-webkit-slider-thumb:hover {
-    box-shadow: 0px 0px 0px 8px theme('colors.grey');
+    box-shadow: var(--range-thumb-hover-box-shadow);
     transition: 0.3s ease-in-out;
   }
 
   input[type="range"]::-moz-range-thumb {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: theme('colors.grey-dark');
+    width: var(--range-thumb-width);
+    height: var(--range-thumb-height);
+    border-radius: var(--range-thumb-border-radius);
+    background-color: var(--range-thumb-background-color);
     cursor: pointer;
   }
 }
