--- a/packages/ui/src/style.css
+++ b/packages/ui/src/style.css
@@ -1,12 +1,12 @@
 @tailwind base;
-@tailwind utilities;
-@tailwind components;
 
 @layer base {
   body {
     --font-size: 16px;
   }
 }
+
+@tailwind utilities;
 
 @layer utilities {
   .transition-colors {
@@ -19,6 +19,8 @@
     border-bottom-width: 1px;
   }
 }
+
+@tailwind components;
 
 @layer components {
   .ui-play-section {
@@ -36,6 +38,10 @@
     @apply flex h-16 items-center px-4;
   }
 
+  .ui-navigator {
+    @apply flex justify-end py-1 px-1 mb-2;
+  }
+
   .ui-play-content {
     @apply flex-1 space-y-4 p-8 pt-6;
 
@@ -48,4 +54,3 @@
     }
   }
 }
-
