--- a/packages/theme/src/css/utilities/colors.css
+++ b/packages/theme/src/css/utilities/colors.css
@@ -1,3 +1,52 @@
+.is-gray {
+  @media (prefers-color-scheme: light) {
+    color: var(--gray-light-12);
+    background-color: var(--gray-light-9);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    color: var(--gray-dark-12);
+    background-color: var(--gray-dark-9);
+  }
+}
+
+.is-gray-border {
+  @media (prefers-color-scheme: light) {
+    outline-color: var(--gray-light-7);
+    border-color: var(--gray-light-7);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    outline-color: var(--gray-dark-7);
+    border-color: var(--gray-dark-7);
+  }
+}
+
+.is-red {
+  @media (prefers-color-scheme: light) {
+    color: var(--red-light-12);
+    background-color: var(--red-light-9);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    color: var(--red-dark-12);
+    background-color: var(--red-dark-9);
+  }
+}
+
+.is-red-border {
+  @media (prefers-color-scheme: light) {
+    outline-color: var(--red-light-7);
+    border-color: var(--red-light-7);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    outline-color: var(--red-dark-7);
+    border-color: var(--red-dark-7);
+  }
+}
+
+/*
 .is-white {
   background-color: theme('colors.white');
   color: theme('colors.white-contrast');
@@ -264,3 +313,4 @@
 .has-text-grey-light {
   color: theme('colors.grey-light');
 }
+*/
